=====================================================

MySQL Connector/Node.JS
Copyright (c) 2016, 2023, Oracle and/or its affiliates.

Full release notes:
 http://dev.mysql.com/doc/relnotes/connector-nodejs/en/

v8.0.35
=======

- Rows can now be inserted in a table using CRUD with an X DevAPI expression
- Date and time operators are now allowed in X DevAPI expressions

v8.0.33
=======

- The JavaScript BigInt type can now be used to send unsafe integer values to the server
- Applications can now choose the JavaScript type (string or BigInt) to use when consuming integer values
- Using TypeScript, the "Table.select()" method now accepts arguments in the form of column names
- The full test suite can now run entirely in a Docker environment
- In TypeScript, the "getAutoIncrementValue()" in the result instance returned by "Table.select()" has been removed
- Using TypeScript, the "Collection.add()" method now accepts any type of object
- Some 3rd-party packages used as "devDependencies" have been updated

v8.0.32
=======

- X DevAPI expressions are now encapsulated in a corresponding Expr module
- The expression parser became stateless and is not re-created every time an expression is used
- X DevAPI expressions are now parsed at the stage where they are used
- All protobuf messages are now constructed only at the corresponding adapter
- Most CRUD statements using expressions are much faster
- 3rd-party dependencies with new releases compatible to Node.js v14.0.0 have been updated
- A script to run the test suite in a Docker container has been introduced
- Unsafe numeric JSON field values are now returned as JavaScript strings
- Collection.add() no longer loses precision with unsafe numeric JSON field values

v8.0.31
=======

- Revamped X DevAPI expression parser
- Precedence in expressions containing bitwise operators is now properly inferred
- Extra leading and trailing whitespaces in expression strings are now allowed and ignored