@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2020, 2022, Oracle and/or its affiliates.
+ * Copyright (c) 2020, 2023, Oracle and/or its affiliates.
  *
  * This program is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License, version 2.0, as
@@ -362,9 +362,23 @@ function formatSafeNumber (value) {
     const int = matcher[1];
     const decimal = matcher[2];
 
-    const isUnsafe = Number.parseFloat(int) < Number.MIN_SAFE_INTEGER ||
-        Number.parseFloat(int) > Number.MAX_SAFE_INTEGER ||
-        Number.parseFloat(decimal) > Number.MAX_SAFE_INTEGER;
+    // JavaScript number is represented in 64-bit format IEEE-754, so there
+    // are exactly 64 bits to store a number: 52 of them are used to store the
+    // digits, 11 of them store the position of the decimal point, and 1 bit
+    // is for the sign.
+    let isUnsafe = false;
+
+    if (!decimal) {
+        // If the decimal part does not exist, we only need to worry about
+        // integer precision.
+        isUnsafe = BigInt(int) > Number.MAX_SAFE_INTEGER || BigInt(int) < Number.MIN_SAFE_INTEGER;
+    } else {
+        // If the decimal part exists, we can check if the number is safe is by
+        // comparing the original raw string with the string resulting from
+        // calling "toFixed()" using the number of decimal digits.
+        isUnsafe = `${int}.${decimal}` !== Number.parseFloat(`${int}.${decimal}`)
+            .toFixed(decimal.length);
+    }
 
     // If the value is unsafe, we should not convert it to a JavaScript number
     // because we might be loosing precision.
